--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,10 +60,10 @@ spring:
 
 spring:
 #  config.activate.on-profile: test
-  config.activate.on-profile: testdb
-  datasource:
-    url: jdbc:h2:mem:board;mode=mysql
-    driverClassName: org.h2.Driver
-  sql.init.mode: always
-  test.database.replace: none;
+#  config.activate.on-profile: testdb
+#  datasource:
+#    url: jdbc:h2:mem:board;mode=mysql
+#    driverClassName: org.h2.Driver
+#  sql.init.mode: always
+#  test.database.replace: none;
 #  datasource.url: jdbc:h2:mem:testdb
