--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ spring:
     username: boardUser
     password: test1234!@#$
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+#    setting h2 connection temp
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    driver-class-name: org.h2.Driver
   jpa:
     open-in-view: false
     defer-datasource-initialization: true
@@ -24,6 +29,7 @@ spring:
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
+#  h2.console.enabled: true
   sql.init.mode: always
 #  data.rest:
 #    base-path: /api
